cha-pre-live-flux2/cha-eks-5a/namespaces/spt-performance/namespace-spt-performance.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: spt-performance
  name: spt-performance
